--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "gatsby": "^2.19.45",
+    "gatsby-plugin-netlify-cms": "^4.2.1",
+    "netlify-cms-app": "^2.11.32",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
