--- a/package.json
+++ b/package.json
@@ -8,19 +8,32 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "lint": "npm run lint:js && npm run lint:scss",
+    "lint:js": "eslint --ignore-pattern src/style/** src/** && npm run type-check",
+    "lint:scss": "npx stylelint \"**/*.scss\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "type-check": "tsc --noEmit"
   },
+  "pre-commit": [ "lint" ],
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
     "gatsby": "^2.19.45",
     "gatsby-plugin-netlify-cms": "^4.2.1",
+    "gatsby-plugin-typescript": "^2.3.1",
     "netlify-cms-app": "^2.11.32",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "stylelint": "^13.2.1",
+    "stylelint-scss": "^3.16.0",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "pre-commit": "^1.2.2",
     "prettier": "^1.19.1"
   },
   "repository": {
