--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "lint:js": "eslint --ignore-pattern src/style/** src/** && npm run type-check",
     "lint:scss": "npx stylelint \"**/*.scss\"",
     "start": "npm run develop",
+    "start:gulp": "gulp scss:watch",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
     "type-check": "tsc --noEmit"
   },
-  "pre-commit": [ "lint" ],
+  "pre-commit": [
+    "lint"
+  ],
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "gatsby": "^2.19.45",
     "gatsby-plugin-netlify-cms": "^4.2.1",
     "gatsby-plugin-typescript": "^2.3.1",
+    "gulp-clean-css": "^4.3.0",
     "netlify-cms-app": "^2.11.32",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -33,6 +37,8 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
+    "gulp": "^4.0.2",
+    "gulp-sass": "^4.0.2",
     "pre-commit": "^1.2.2",
     "prettier": "^1.19.1"
   },
