--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "lint": "npm run lint:js && npm run lint:scss",
-    "lint:js": "eslint --ignore-pattern src/style/** src/** && npm run type-check",
+    "lint:js": "eslint --ignore-pattern *.scss src/** && npm run type-check",
     "lint:scss": "npx stylelint \"**/*.scss\"",
     "start": "npm run develop",
     "start:gulp": "gulp scss:watch",
@@ -26,9 +26,10 @@
     "@typescript-eslint/parser": "^2.25.0",
     "gatsby": "^2.19.45",
     "gatsby-plugin-netlify-cms": "^4.2.1",
+    "gatsby-plugin-sass": "^2.2.1",
     "gatsby-plugin-typescript": "^2.3.1",
-    "gulp-clean-css": "^4.3.0",
     "netlify-cms-app": "^2.11.32",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "stylelint": "^13.2.1",
@@ -37,8 +38,6 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "gulp": "^4.0.2",
-    "gulp-sass": "^4.0.2",
     "pre-commit": "^1.2.2",
     "prettier": "^1.19.1"
   },
