--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
+    "classnames": "^2.2.6",
     "gatsby": "^2.19.45",
     "gatsby-plugin-netlify-cms": "^4.2.1",
     "gatsby-plugin-sass": "^2.2.1",
