--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "gatsby-plugin-netlify-cms": "^4.2.1",
     "gatsby-plugin-sass": "^2.2.1",
     "gatsby-plugin-typescript": "^2.3.1",
+    "gatsby-source-filesystem": "^2.2.4",
+    "gatsby-transformer-remark": "^2.7.3",
     "netlify-cms-app": "^2.11.32",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
