--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
     name: github
     repo: MariusLastauskas/media-tracker
+    branch: deploy
 
 media_folder: static/img
 public_folder: /img
